--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
+  "private": false,
   "files": [
     "src",
     "lib",
@@ -54,8 +55,8 @@
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.68.0",
+    "@typescript-eslint/parser": "^5.36.1",
     "commitlint": "^17.0.2",
-    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.1",
@@ -105,10 +106,14 @@
   },
   "eslintConfig": {
     "root": true,
-    "parser": "@babel/eslint-parser",
+    "parser": "@typescript-eslint/parser",
     "extends": [
+      "plugin:@typescript-eslint/recommended",
       "@react-native-community",
       "prettier"
+    ],
+    "plugins": [
+      "@typescript-eslint"
     ],
     "rules": {
       "prettier/prettier": [
@@ -147,5 +152,9 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "eslint": "8.22.0",
+    "react-native-reanimated": "^2.10.0"
   }
 }
